--- a/myrestra/restr.html
+++ b/myrestra/restr.html
@@ -272,7 +272,7 @@
 	<!-- title--> 
 	<div class="row">
  	<div class="col">
-	<h1 class="primary-color text-uppercase">Relationships</h1>
+	<h1 class="primary-color text-uppercase">Trauma</h1>
 	</div>
  </div>
 	<!--end title-->
@@ -338,8 +338,8 @@
 	<div class=""></div>
 	<h1 class="secondary-color text-uppercase display-3">about us<h1>
 	
-	
-	<h3 class="secondary-color text-uppercase">	I have been a practising Graphologist ( Handwriting Analysts ) since last 18 years. This is a unique and trusted way of getting to the root cause of any problems and solving it completely. The remedies we provide heals a person's life and brings peace, happiness,  success and abundance in their lives.	</h3>
+	 
+	<h3 class="secondary-color text-uppercase">	 Here we stress the importance of getting in touch with what it is you want in life, then choosing it , and formulating a course of action to ensure results. Our ultimate "Goal" though is to eventually bring a balance between your Mind, Body and Soul.	</h3>
 	<!--<a href="" class="btn main-btn my-4 text-capitalize">learn more</a>t-->
 	</div>
 	<div class="col-md-6 about-pictures my-4 d-none d-lg-block">
@@ -377,8 +377,8 @@
   
   <!---text---->
   <div class="review-text px-5">
-  <h2 class="text-capitalize mb-3 secondary-color"> name</h2>
-  <p class="text-capitalize secondary-color">Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</p>
+  <h2 class="text-capitalize mb-3 secondary-color"> Shakeel</h2>
+  <p class="text-capitalize secondary-color">Thanks a lot "Choose Your Life" You showed me no setback in life is permanent. I have emerged as more confident, happier & successful person now.</p>
 	
   </div>
   </div>
@@ -400,8 +400,8 @@
   
   <!---text---->
   <div class="review-text px-5">
-  <h2 class="text-capitalize mb-3 secondary-color"> name</h2>
-  <p class="text-capitalize secondary-color"><strong>Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</strong></p>
+  <h2 class="text-capitalize mb-3 secondary-color"> Aqeel</h2>
+  <p class="text-capitalize secondary-color">These are very practical and effective therapies which are a need of the hour in today's time as every other individual is going through stress, competitiveness and illness. Go ahead , try it and trust me its worth it.</p>
 	
   </div>
   </div>
@@ -423,8 +423,8 @@
   
   <!---text---->
   <div class="review-text px-5">
-  <h2 class="text-capitalize mb-3 secondary-color"> name</h2>
-  <p class="text-capitalize secondary-color">Shah Rukh Khan, often addressed as King Khan, turns 52 today. In his career of over 25 years, Shah Rukh has seen a meteoric rise in fame and success. A truly global star, Shah Rukh's fame is not limited by geographical boundaries.</p>
+  <h2 class="text-capitalize mb-3 secondary-color"> Sarfaraz</h2>
+  <p class="text-capitalize secondary-color">Unbelievable changes have taken place in my life, which I would have never thought possible otherwise.My outlook towards life has become optimistic and the results are simply awesome.</p>
 	
   </div>
   </div>
@@ -474,9 +474,9 @@
  <img src="img/safdar.jpg" alt="" class="card-img-top">
  <div class="card-body">
  <div class="card-title"> 
- <h1 class="text-capitalize">team member</h1>
+ <h1 class="text-capitalize secondary-color">safdar</h1>
  </div>
- <h4 class="primary-color text-capitalize">chef</h4>
+ <h4 class="primary-color text-capitalize">powerful</h4>
  </div>
  <div class="card-footer team-icons d-flex justify-content-between">
  <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
@@ -501,9 +501,9 @@
  <img src="img/sarfaraz1.jpg" alt="" class="card-img-top">
  <div class="card-body">
  <div class="card-title"> 
- <h1 class="text-capitalize">team member</h1>
+ <h1 class="text-capitalize secondary-color">sarfaraz</h1>
  </div>
- <h4 class="primary-color text-capitalize">chef</h4>
+ <h4 class="primary-color text-capitalize">awesome !!!</h4>
  </div>
  <div class="card-footer team-icons d-flex justify-content-between">
  <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
@@ -528,9 +528,9 @@
  <img src="img/aqeel.jpg" alt="" class="card-img-top">
  <div class="card-body">
  <div class="card-title"> 
- <h1 class="text-capitalize">team member</h1>
+ <h1 class="text-capitalize secondary-color">aqeel</h1>
  </div>
- <h4 class="primary-color text-capitalize">chef</h4>
+ <h4 class="primary-color text-capitalize">ma sha Allah</h4>
  </div>
  <div class="card-footer team-icons d-flex justify-content-between">
  <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
